# voicemutator

./: AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  LICENSE  Main.cpp  MainComponent.cpp  MainComponent.h  RecordingThumbnail.cpp  RecordingThumbnail.h
.github/workflows/: codeql.yml
